[gd_scene load_steps=2 format=3 uid="uid://b1x2y304a5b6c"]

[ext_resource type="Script" uid="uid://civwwyh33d2lt" path="res://CardUI.gd" id="1_cde78"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 200.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_cde78")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 33.0
text = "Card Name"
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 140.0
offset_bottom = 190.0
text = "This is the card description."
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
